# particle_swarm_optimisation_parallel

./: .gitignore  CMakeLists.txt  Makefile  checklist.txt  job.sh
resources/: #source.txt  .brain_vs_body_weight.txt.swo  auto_mpg.txt  brain_vs_body_weight.txt  breast_cancer_wisconsin.txt  concrete.txt  pasture_rental_price.txt
src/: Swarm.h  main.cpp  particle.cpp  particle.h  problem.h  problem_optimiser.cpp  problem_optimiser.h  pso_types.h  swarm.cpp
src/problems/: BrainVsBodyWeight.cpp  BrainVsBodyWeight.h  PastureRentalPrice.cpp  PastureRentalPrice.h  RegressionFileReader.cpp  RegressionFileReader.h  parabola_test_problem_25d.cpp  parabola_test_problem_25d.h  parabola_test_problem_50d.cpp  parabola_test_problem_50d.h  parabola_test_problem_5d.cpp  parabola_test_problem_5d.h  problem.cpp  problem.h  regression_file_reader.cpp  regression_file_reader.h  regression_problem.cpp  regression_problem.h  sphere_test_problem_25d.cpp  sphere_test_problem_25d.h  sphere_test_problem_50d.cpp  sphere_test_problem_50d.h  sphere_test_problem_5d.cpp  sphere_test_problem_5d.h
